Name:                tzworld-happstack
Version:             0.1
Synopsis:            Web service for finding a time zone by location that uses happstack
Description:         Web service for finding a time zone by location 
License:             AllRightsReserved
Author:              Dan Plubell
Maintainer:          danplubell@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable tzworld-happstack
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
      base                      >= 4     && < 5
    , happstack-server          >= 7.4   && < 8
    , transformers
    , bytestring
    , aeson
    , tzworld-api    
  
  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
